# intelligent-assistant

./: .env.example  .gitignore  INSTALLATION_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  ed25519-public.pem  main.py  pyproject.toml  requirements.txt  run_gui.py  start_gui.py  start_web.py  start_web_simple.py  启动智能体.bat
data/: contacts.json  user_config.json
data/conversations/: conversation.json
data/history/: all_history.json
docs/: COMPARISON_WITH_OPENCLAW.md  PROJECT_SUMMARY.md
skills/calendar/: SKILL.md
skills/create_document/: SKILL.md
skills/file-manager/: SKILL.md  agent.py
skills/generate-qr-code/: SKILL.md  agent.py
skills/music_player/: free_music.py  simple_player.py
skills/netease-music/: SKILL.md  agent.py  simple_player.py
skills/pending/: README.md
skills/play_music/: SKILL.md
skills/query_weather/: SKILL.md
skills/search_web/: SKILL.md
skills/send_email/: SKILL.md
skills/system-info/: SKILL.md
skills/weather-query/: SKILL.md  agent.py
skills/web-search/: SKILL.md
src/personal_agent/: __init__.py  __main__.py  config.py  config_center.py  email_monitor.py  email_receiver.py  main.py  multi_agent_system.py  session_manager.py  task_manager.py  user_config.py
src/personal_agent/agents/: AGENT_TEMPLATE.md  __init__.py  agent_scanner.py  base.py  gap_analyzer.py  master.py  message_bus.py  skill_to_agent.py
src/personal_agent/channels/: __init__.py  agent_manager_dialog.py  base.py  cli.py  conversation_manager.py  gui.py  homeassistant_dashboard.py  music_player.py  settings_dialog.py  web.py  (+2 more)
(+200 files in other folders)
